--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { menuLinks, siteConfig } from "@/site-config";
+import { siteConfig } from "@/site-config";
 
 const year = new Date().getFullYear();
 ---
@@ -11,16 +11,4 @@ const year = new Date().getFullYear();
 		&copy; {siteConfig.author}
 		{year}.<span class="inline-block">&nbsp;🚀&nbsp;Astro Cactus</span>
 	</div>
-	<nav
-		aria-label="More on this site"
-		class="flex gap-x-2 sm:gap-x-0 sm:divide-x sm:divide-gray-500"
-	>
-		{
-			menuLinks.map((link) => (
-				<a class="px-4 py-2 sm:py-0 sm:hover:text-textColor sm:hover:underline" href={link.path}>
-					{link.title}
-				</a>
-			))
-		}
-	</nav>
 </footer>
