Remove unnecessary pages

--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -22,6 +22,11 @@ const socialLinks: {
 		link: "https://www.linkedin.com/in/shemin-a-89645119a/",
 		name: "mdi:linkedin",
 	},
+	{
+		friendlyName: "Twitter",
+		link: "https://twitter.com/shemin_a",
+		name: "mdi:twitter",
+	},
 ];
 ---
 
