--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,15 +13,22 @@ import PageLayout from "@/layouts/Base.astro";
 		</p>
 		<SocialList />
 	</section>
-	<section aria-label="Blog post list" class="mt-16">
-		<h2 class="title mb-4 text-xl">Posts</h2>
+	<section class="mt-16">
+		<h2 class="title mb-4 text-xl">Professional experience</h2>
 		<ul class="space-y-4">
 			<li>Something</li>
 			<li>Something</li>
 		</ul>
 	</section>
 	<section class="mt-16">
-		<h2 class="title mb-4 text-xl">Technologies</h2>
+		<h2 class="title mb-4 text-xl">Hobby projects</h2>
+		<ul class="space-y-4">
+			<li>Something</li>
+			<li>Something</li>
+		</ul>
+	</section>
+	<section class="mt-16">
+		<h2 class="title mb-4 text-xl">Publications</h2>
 		<dl class="space-y-4">
 			<dt>Something here</dt>
 			<dt>Something here</dt>
