--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,17 +21,53 @@ import PageLayout from "@/layouts/Base.astro";
 		</ul>
 	</section>
 	<section class="mt-16">
+		<h2 class="title mb-4 text-xl">Blogs</h2>
+		<ul class="space-y-4">
+			<li>Something here</li>
+			<li>Something here</li>
+		</ul>
+	</section>
+	<section class="mt-16">
+		<h2 class="title mb-4 text-xl">Publications</h2>
+		<ul class="list-disc space-y-4 pl-6">
+			<li>
+				S Krishna Bhat, Shemin Anto, Narayanan V Eswar, Shreyas S Kumar, Pankaj Kumar G-
+				<b>“Interactive Workbook for Effective Virtual Laboratories”</b>- 3RD International
+				Conference on Information Systems and Management Science (ISMS) 2020, Malta.
+				<div class="mt-1">
+					<a target="_blank" href="https://link.springer.com/chapter/10.1007/978-3-030-86223-7_6">
+						https://link.springer.com/chapter/10.1007/978-3-030-86223-7_6
+					</a>
+				</div>
+			</li>
+			<li>
+				Shemin Anto, S Krishna Bhat, Keerthana Krishnakumar, Sherin Shaju, Narayanan V Eswar, Pankaj
+				Kumar G - <b>“Sustainable and Collaborative Automated Farming Technology with LoRa”</b> - National
+				Conference on Electronics, Communication, and Computation-2020, NIT Jamshedpur.<br />
+				<div class="mt-1">
+					<a target="_blank" href="https://doi.org/10.47531/mantech/ecc.2021.25">
+						https://doi.org/10.47531/mantech/ecc.2021.25
+					</a>
+				</div>
+			</li>
+			<li>
+				Jerin Jayaraj, Paul Antony, Shemin Anto, Narayanan V Eswar, Pankaj Kumar G- <b
+					>“YouTube Comment Based Video Ranking System”</b
+				> - International Conference on Digital Technologies and Transformation in Academic Libraries,
+				NIT Surathkal.
+			</li>
+			<li>
+				Anupriya Dominic, Shemin Anto, Anjaly J A, Sherfin Shamsudeen, Pankaj Kumar G- <b
+					>“Removing Private Sensitive Media Files from the Web using Blockchain Technology“</b
+				>-National Conference on Blockchain and Smart Contract Technologies, NIT Trichy.
+			</li>
+		</ul>
+	</section>
+	<section class="mt-16">
 		<h2 class="title mb-4 text-xl">Hobby projects</h2>
 		<ul class="space-y-4">
 			<li>Something</li>
 			<li>Something</li>
 		</ul>
-	</section>
-	<section class="mt-16">
-		<h2 class="title mb-4 text-xl">Publications</h2>
-		<dl class="space-y-4">
-			<dt>Something here</dt>
-			<dt>Something here</dt>
-		</dl>
 	</section>
 </PageLayout>
