--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import PageLayout from "@/layouts/Base.astro";
 			<li>
 				Shemin Anto, S Krishna Bhat, Keerthana Krishnakumar, Sherin Shaju, Narayanan V Eswar, Pankaj
 				Kumar G - <b>“Sustainable and Collaborative Automated Farming Technology with LoRa”</b> - National
-				Conference on Electronics, Communication, and Computation-2020, NIT Jamshedpur.<br />
+				Conference on Electronics, Communication, and Computation-2020, NIT Jamshedpur.
 				<div class="mt-1">
 					<a target="_blank" href="https://doi.org/10.47531/mantech/ecc.2021.25">
 						https://doi.org/10.47531/mantech/ecc.2021.25
@@ -63,11 +63,58 @@ import PageLayout from "@/layouts/Base.astro";
 			</li>
 		</ul>
 	</section>
-	<section class="mt-16">
+	<section class="mb-10 mt-16">
 		<h2 class="title mb-4 text-xl">Hobby projects</h2>
-		<ul class="space-y-4">
-			<li>Something</li>
-			<li>Something</li>
+		<ul class="list-disc space-y-4 pl-6">
+			<li class="space-y-2">
+				<h2 class="title text-base">Things Platform</h2>
+				<p>
+					A web application that serves as an IoT platform for monitoring IoT devices. Developed
+					using Django, React, and bootstrap.
+					<div>
+						<a target="_blank" href="https://github.com/sheminanto/Things-Platform">
+							https://github.com/sheminanto/Things-Platform
+						</a>
+					</div>
+				</p>
+			</li>
+			<li class="space-y-2">
+				<h2 class="title text-base">Virtual Queue System for Crowd Management</h2>
+				<p>
+					Web-based application for effective management of crowd by implementing virtual queue.
+					Users can host events or attend events, hosted by others, on booking their slots for the
+					same. Developed using ReactJs, FastAPI, Alembic.
+					<div>
+						<a target="_blank" href="https://github.com/shreyas-s-k/Virtual-Queue-System-/">
+							https://github.com/shreyas-s-k/Virtual-Queue-System-/
+						</a>
+					</div>
+				</p>
+			</li>
+			<li class="space-y-2">
+				<h2 class="title text-base">Screen Recorder</h2>
+				<p>
+					Desktop Screen Recorder built using electron js. Developed at the covid-19 pandemic
+					situation to make it easier for the teachers to record online classes.
+					<div>
+						<a target="_blank" href="https://github.com/sheminanto/electron-screen-recorder">
+							https://github.com/sheminanto/electron-screen-recorder
+						</a>
+					</div>
+				</p>
+			</li>
+			<li class="space-y-2">
+				<h2 class="title text-base">Fisatian</h2>
+				<p>
+					Mobile application to check attendance details of students in the college(FISAT). Built
+					using Flutter, Flask, Web scrapping.
+					<div>
+						<a target="_blank" href="https://github.com/sheminanto/fisatian_app">
+							https://github.com/sheminanto/fisatian_app
+						</a>
+					</div>
+				</p>
+			</li>
 		</ul>
 	</section>
 </PageLayout>
