--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,28 +13,36 @@ import PageLayout from "@/layouts/Base.astro";
 		</p>
 		<SocialList />
 	</section>
-	<section class="mt-16">
+	<section class="mt-10">
 		<h2 class="title mb-4 text-xl">Professional experience</h2>
 		<ul class="space-y-4">
 			<li>Something</li>
 			<li>Something</li>
 		</ul>
 	</section>
-	<section class="mt-16">
+	<section class="mt-10">
 		<h2 class="title mb-4 text-xl">Blogs</h2>
-		<ul class="space-y-4">
-			<li>Something here</li>
-			<li>Something here</li>
+		<ul class="list-disc space-y-4 pl-6">
+			<li>
+				<div class="mt-1 underline">
+					<a
+						target="_blank"
+						href="https://www.bigbinary.com/blog/how-neetoTestify-improved-test-suites-performance-utilizing-ancestry-gem"
+					>
+						"Improving the application performance by harnessing the full potential of ancestry gem"
+					</a>
+				</div>
+			</li>
 		</ul>
 	</section>
-	<section class="mt-16">
+	<section class="mt-10">
 		<h2 class="title mb-4 text-xl">Publications</h2>
 		<ul class="list-disc space-y-4 pl-6">
 			<li>
 				S Krishna Bhat, Shemin Anto, Narayanan V Eswar, Shreyas S Kumar, Pankaj Kumar G-
 				<b>“Interactive Workbook for Effective Virtual Laboratories”</b>- 3RD International
 				Conference on Information Systems and Management Science (ISMS) 2020, Malta.
-				<div class="mt-1">
+				<div class="mt-1 underline">
 					<a target="_blank" href="https://link.springer.com/chapter/10.1007/978-3-030-86223-7_6">
 						https://link.springer.com/chapter/10.1007/978-3-030-86223-7_6
 					</a>
@@ -44,7 +52,7 @@ import PageLayout from "@/layouts/Base.astro";
 				Shemin Anto, S Krishna Bhat, Keerthana Krishnakumar, Sherin Shaju, Narayanan V Eswar, Pankaj
 				Kumar G - <b>“Sustainable and Collaborative Automated Farming Technology with LoRa”</b> - National
 				Conference on Electronics, Communication, and Computation-2020, NIT Jamshedpur.
-				<div class="mt-1">
+				<div class="mt-1 underline">
 					<a target="_blank" href="https://doi.org/10.47531/mantech/ecc.2021.25">
 						https://doi.org/10.47531/mantech/ecc.2021.25
 					</a>
@@ -63,7 +71,7 @@ import PageLayout from "@/layouts/Base.astro";
 			</li>
 		</ul>
 	</section>
-	<section class="mb-10 mt-16">
+	<section class="mb-10 mt-10">
 		<h2 class="title mb-4 text-xl">Hobby projects</h2>
 		<ul class="list-disc space-y-4 pl-6">
 			<li class="space-y-2">
@@ -71,7 +79,7 @@ import PageLayout from "@/layouts/Base.astro";
 				<p>
 					A web application that serves as an IoT platform for monitoring IoT devices. Developed
 					using Django, React, and bootstrap.
-					<div>
+					<div class="underline">
 						<a target="_blank" href="https://github.com/sheminanto/Things-Platform">
 							https://github.com/sheminanto/Things-Platform
 						</a>
@@ -85,7 +93,11 @@ import PageLayout from "@/layouts/Base.astro";
 					Users can host events or attend events, hosted by others, on booking their slots for the
 					same. Developed using ReactJs, FastAPI, Alembic.
 					<div>
-						<a target="_blank" href="https://github.com/shreyas-s-k/Virtual-Queue-System-/">
+						<a
+							class="underline"
+							target="_blank"
+							href="https://github.com/shreyas-s-k/Virtual-Queue-System-/"
+						>
 							https://github.com/shreyas-s-k/Virtual-Queue-System-/
 						</a>
 					</div>
@@ -96,7 +108,7 @@ import PageLayout from "@/layouts/Base.astro";
 				<p>
 					Desktop Screen Recorder built using electron js. Developed at the covid-19 pandemic
 					situation to make it easier for the teachers to record online classes.
-					<div>
+					<div class="underline">
 						<a target="_blank" href="https://github.com/sheminanto/electron-screen-recorder">
 							https://github.com/sheminanto/electron-screen-recorder
 						</a>
@@ -108,7 +120,7 @@ import PageLayout from "@/layouts/Base.astro";
 				<p>
 					Mobile application to check attendance details of students in the college(FISAT). Built
 					using Flutter, Flask, Web scrapping.
-					<div>
+					<div class="underline">
 						<a target="_blank" href="https://github.com/sheminanto/fisatian_app">
 							https://github.com/sheminanto/fisatian_app
 						</a>
